# DoCarreto

./: .env.example  .gitignore  COMANDOS_ALEMBIC copy.md  CustoTotal.md  Lean Canvas.doc  README copy.md  README.md  Template Visão de Produto.doc  alembic.ini  casos_de_uso.md  database.db  diagrama.md  docker-compose.yaml  pyproject.toml  visao_do_projeto.md
Lab 10 - Relatorio/: Template_Relatorio_Parcial_Sprint2.docx
Lab 8 - Planegamento da SPRINT 2/: Relatório.md
src/frontend/: app.json  package-lock.json  package.json
src/frontend/app/: _layout.tsx  cadastro-caminhoneiro.tsx  cadastro-demanda.tsx  chats.tsx  editar-demanda.tsx  escolher-perfil.tsx  home.tsx  homeContratante.tsx  homeMotorista.tsx  index.tsx  login.tsx  minhas-candidaturas.tsx  ressetPassword.tsx  search_demands.tsx  signup.tsx
src/frontend/app/chat/: [chatId].tsx
src/frontend/app/demanda/: [id].tsx
src/frontend/components/: confirm-dialog.tsx  navbar.tsx
src/frontend/lib/: api.ts  auth.tsx
src/projeto/: app.py  auth.py  database.py  settings.py
src/projeto/manager/: conection.py
src/projeto/migrations/: env.py
src/projeto/migrations/versions/: 252dad475cb5_primeira_migration.py  6faf0ee2d5a5_removendo_username_criando_email_como_.py  71054350a9b1_migration_inicial.py  9ca6c703b63b_tabela_de_criador_de_demandas_e_.py  9cf893bdccfc_tabela_chat.py  cfeaed70a706_tabela_de_mensagens.py  e760c7431c49_arrumando_o_enum_do_usertype.py  (+2 more)
src/projeto/routes/: candidatura.py  chat.py  criador_demanda.py  demand.py  entregador.py  mensagens.py  token.py  user.py
src/projeto/schemas/: __init__.py  candidatura.py  chat.py  criador_demanda.py  demand.py  entregador.py  mensagens.py  token.py  user.py
src/projeto/utils/: chat.py  db_helpers.py  logger_dec.py
